refactor(java): enforce read-only DomainView and bake keys at build time in SnapshotBuilder